--- a/client/src/style.css
+++ b/client/src/style.css
@@ -221,7 +221,7 @@ footer .copy {
 .popup {
   width: 100%;
   height: 100%;
-  margin-top: 3rem;
+  margin-top: 1rem;
   max-width: 750px;
   padding: 1rem 5vw;
   font-size: 16px;
@@ -287,7 +287,7 @@ footer .copy {
   border-radius: 50%;
   display: grid;
   place-items: center;
-  margin: 1rem 0 2rem 0;
+  cursor: pointer;
 }
 
 .popup .back img {
@@ -366,8 +366,12 @@ footer .copy {
 
   .popup {
     margin: 15vh auto;
-    height: 65vh;
+    height: 70vh;
     border-radius: 10px;
+  }
+
+  .popup .back {
+    margin: 1rem 0 0 -3rem;
   }
 
   .popup .back #back-cross {
