--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   transition: all 0.1s ease-in-out;
+  font-family: 'Signika', sans-serif;
 }
 
 :root {
@@ -111,6 +114,7 @@ main {
   padding-top: 6rem;
   max-width: 1100px;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 main section {
@@ -123,11 +127,13 @@ section .content {
   align-items: flex-end;
   gap: 1rem;
   row-gap: 3rem;
+  padding: 0 20px;
 }
 
 section h3 {
   color: var(--title-color);
-  font-weight: 900;
+  font-weight: 700;
+  font-size: 1.3rem;
   text-transform: uppercase;
   margin-bottom: 3rem;
 }
@@ -143,11 +149,20 @@ section h3 {
 }
 
 .item p {
-  font-size: 18px;
-  font-weight: 600;
+  font-size: 1.1rem;
+  font-weight: 700;
   text-align: center;
   text-transform: capitalize;
   margin-left: -2rem;
+}
+
+.spinner {
+  width: 95vw;
+  height: 70vh;
+  display: grid;
+  place-items: center;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 /* ============= End Main Section ============= */
@@ -160,6 +175,7 @@ footer {
   padding: 2rem;
   display: grid;
   gap: 2rem;
+  font-family: 'Flamenco', cursive;
 }
 
 footer .footer-info {
@@ -336,6 +352,10 @@ footer .copy {
 
   section .content {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .item p {
+    font-size: 1.2rem;
   }
 
   section img:hover {
